--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,15 @@
 {
     "extends": [
         "airbnb",
+        "plugin:@typescript-eslint/recommended",
+        "prettier/@typescript-eslint",
         "plugin:prettier/recommended"
     ],
     "globals": {
         "document": true
     },
     "plugins": [
-      "@typescript-eslint"
+      "@typescript-eslint", "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
