--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,8 +15,12 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "sourceType": "module",
-        "jsx": true,
-        "useJSXTextNode": true
+        "project": ["./tsconfig.json"],
+        "useJSXTextNode": true,
+        "ecmaVersion": 2020,
+        "ecmaFeatures": {
+          "jsx": true
+        }
     },
     "rules": {
         "react/jsx-filename-extension": [
