--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,17 @@
             }
         ],
         "no-unused-vars": "off",
-        "@typescript-eslint/no-unused-vars": "error"
+        "@typescript-eslint/no-unused-vars": "error",
+        "import/extensions": [
+          "error",
+          "ignorePackages",
+          {
+            "js": "never",
+            "jsx": "never",
+            "ts": "never",
+            "tsx": "never"
+          }
+        ]
     },
     "settings": {
       "import/resolver": {
